syntax = "proto3";
package rook.game;

option go_package = "github.com/cmwaters/rook/x/game/types";

message Overview {
  Map map = 1; 
  uint32 param_version = 2;
}

message State { 
  repeated Faction players = 1;
  repeated Populace gaia = 2;
  uint64 step = 3;
}

message Map {
  repeated Landscape tiles = 1;
  uint32 width = 2;
}

message Faction {
  string player = 1;
  ResourceSet resources = 2;
  repeated Populace population = 3;
}

message Populace {
  uint32 amount = 1;
  Position position = 2;
  Settlement settlement = 3;
}

message Config {
  InitializationConfig initial = 1;
  MapConfig map = 2; 
}

message MapConfig {
  uint32 width = 1;
  uint32 height = 2;
  int64 seed = 3;
  uint32 mountains_density = 4;
  uint32 forest_density = 5;
  uint32 lake_density = 6;
  uint32 plains_density = 7;
}

message InitializationConfig {
  uint32 teams = 1;
  ResourceSet resources = 2;
}

message Params {
  repeated ResourceSet production_rate = 1;
  repeated ResourceSet construction_cost = 2;
}

message Position {
  uint32 x = 3; 
  uint32 y = 4; 
}

enum Direction {
  LEFT = 0;
  RIGHT = 1;
  UP = 2;
  DOWN = 3;
}

enum Landscape {
  UNKNOWN = 0; 
  PLAINS = 1;
  FOREST = 2;
  MOUNTAINS = 3;
  LAKE = 4;
}

enum Settlement {
  NONE = 0;
  TOWN = 1;
  CITY = 2;
  CAPITAL = 3;
  LUMBERMILL = 4;
  QUARRY = 5;
  FARM = 6;
  ROOK = 7;
}

message ResourceSet {
  uint32 food = 1;
  uint32 stone = 2;
  uint32 wood = 3;
  uint32 population = 4;
}